--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+  <script src="js/mousetrap.js"></script>
+
   <title>Skill Tiles!</title>
 </head>
 <body>
