Link JS files in head of index page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <script src="js/mousetrap.js"></script>
 
+  <script src="js/game.js"></script>
+
+  <script src="js/application.js"></script>
+
   <title>Skill Tiles!</title>
 </head>
 <body>
