Change title of game page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script src="js/application.js"></script>
 
-  <title>Skill Tiles!</title>
+  <title>Danny's Skill Tiles!</title>
 </head>
 <body>
   
