Rename index.html to resume_tiles.html, change page title

--- a/resume_tiles.html
+++ b/resume_tiles.html
@@ -13,7 +13,7 @@
 
   <script src="js/application.js"></script>
 
-  <title>Danny's Skill Tiles!</title>
+  <title>Danny's Resume Tiles!</title>
 </head>
 <body>
 
