--- a/resume_tiles.html
+++ b/resume_tiles.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/application.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -17,34 +19,46 @@
 </head>
 <body>
 
-<div id="game-container">
-  <table id="game-grid">
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-  </table>
+<div class="container">
+  <div class="col-md-4">
+    <div id="legend-title">LEGEND</div>
+    <div id="tile-legend">
+      <div class="legend-logo two"></div>
+      <div class="legend-logo four"></div>
+      <div class="legend-logo eight"></div>
+      <div class="legend-logo sixteen"></div>
+      <div class="legend-logo thirty-two"></div>
+      <div class="legend-logo sixty-four"></div>
+      <div class="legend-logo one-twenty-eight"></div>
+      <div class="legend-logo two-fifty-six"></div>
+      <div class="legend-logo five-twelve"></div>
+      <div class="legend-logo ten-twenty-four"></div>
+      <div class="legend-logo">?</div>
+      <div></div>
+    </div>
+  </div>
+
+  <div class="col-md-8">
+    <div id="game-grid">
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+      <div class="tile"></div>
+    </div>
+  </div>
 </div>
-  
+
 </body>
 </html>
